// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoteForm NoteForm Component should match the snapshot 1`] = `
<div
  className="Note"
>
  <section
    className="Note-Content"
  >
    <div
      className="Note-Form-Container"
    >
      <div
        className="Note-Form"
      >
        <input
          className="Note-Title"
          name="title"
          onChange={[Function]}
          placeholder="Title"
          type="text"
          value="Jake ToDo"
        />
        <ul
          className="ListItems"
        >
          <ListItem
            handleItemChange={[Function]}
            handleItemDelete={[Function]}
            id="O6oYExG7Q"
            index={0}
            isComplete={false}
            key="O6oYExG7Q"
            text="Do basic styling"
            toggleComplete={[Function]}
          />
        </ul>
        <ul
          className="ListItems Completed"
        />
        <NoteOptions
          deleteNote={[Function]}
          handleClose={[Function]}
          handleType={[Function]}
        />
        <section
          className="Note-Error"
        >
          <h2 />
        </section>
      </div>
    </div>
  </section>
</div>
`;

exports[`NoteForm NoteForm Component should update match the snapshot when there is more list items in the list state 1`] = `
<div
  className="Note"
>
  <section
    className="Note-Content"
  >
    <div
      className="Note-Form-Container"
    >
      <div
        className="Note-Form"
      >
        <input
          className="Note-Title"
          name="title"
          onChange={[Function]}
          placeholder="Title"
          type="text"
          value="Jake ToDo"
        />
        <ul
          className="ListItems"
        >
          <ListItem
            handleItemChange={[Function]}
            handleItemDelete={[Function]}
            id="O6oYExG7Q"
            index={0}
            isComplete={false}
            key="O6oYExG7Q"
            text="Do basic styling"
            toggleComplete={[Function]}
          />
          <ListItem
            handleItemChange={[Function]}
            handleItemDelete={[Function]}
            id="1234552f4"
            index={1}
            isComplete={false}
            key="1234552f4"
            text="Javascript is cool"
            toggleComplete={[Function]}
          />
        </ul>
        <div
          className="Completed-Message"
        >
          <p>
            1
             Completed Items
          </p>
        </div>
        <ul
          className="ListItems Completed"
        >
          <ListItem
            handleItemChange={[Function]}
            handleItemDelete={[Function]}
            id="55ogax554"
            index={0}
            isComplete={true}
            key="55ogax554"
            text="Do More CsS"
            toggleComplete={[Function]}
          />
        </ul>
        <NoteOptions
          deleteNote={[Function]}
          handleClose={[Function]}
          handleType={[Function]}
        />
        <section
          className="Note-Error"
        >
          <h2 />
        </section>
      </div>
    </div>
  </section>
</div>
`;
